[package]
name = "quantum-simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
ndarray = "*"
num-complex = "*"
num-traits = "*"
rand = "*"

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
